[8.3 & 9.3][F] fix notification card overflow glitch & standardize admin page

--- a/frontend/src/app/components/notifications/notifications.component.css
+++ b/frontend/src/app/components/notifications/notifications.component.css
@@ -48,5 +48,9 @@ h2 {
   overflow-y: auto;
 }
 
-
-
+.title-text{
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-height: 2vh;
+}
